--- a/example.env
+++ b/example.env
@@ -1,4 +1,3 @@
-ECHO_PORT=":1323"
-MYSQL_DSN="root:secret@tcp(localhost:3306)/go-template?parseTime=true"
+DATABASE_URL=postgres://postgres:mysecretpassword@localhost:5432/store-management
 JWT_SECRET="secret"
 JWT_DURATION="1h"
